# GraphTreeVisualizer

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  prestart.sh  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py  routers.py
backend/src/core/: config.py
backend/src/scripts/: populate_db.py
backend/src/scripts/data/: sample_1.json  sample_2.json
backend/src/tree/: api.py  models.py  schemas.py  services.py
backend/tests/: conftest.py
backend/tests/trees/: conftest.py  test_api.py  test_services.py
backend/tests/utils/: utils.py
frontend/: Dockerfile  index.html  openapi.json  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/components/: Edge.vue  Node.vue  NodeDialog.vue  TreeDiagram.vue  TreeList.vue
